[package]
name = "RustWS"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde_json = "1.0.96"
futures = "0.3.28"

[[bin]]
name = "RustWS"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
